# llm_english_agent

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/adaptors/: openai_adaptor.py
app/services/: __init__.py  base.py  rag_grammar_checker.py  simple_grammar_checker.py  standard_english_checker.py  summarizer.py
